Fixed projects sync with tasks and fixed some layout issues

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,5 +1,5 @@
 <header class="header">
-    <a routerLink="">
+    <a routerLink="" (click)="resetSelectId(null)">
         <h1 class="header__title">Clifford's Todos</h1>
     </a>
 </header>
