--- a/src/app/pages/home/projects/projects.component.scss
+++ b/src/app/pages/home/projects/projects.component.scss
@@ -16,7 +16,7 @@
 .task-layout__header {
     width: 100%;
     display: flex;
-    justify-content: center;   /* Centrerar horisontellt */
+    justify-content: start;   /* Centrerar horisontellt */
     align-items: start;       /* Centrerar vertikalt */
 }
 
