--- a/src/app/pages/create-project/create-project.component.html
+++ b/src/app/pages/create-project/create-project.component.html
@@ -1,1 +1,37 @@
-<p>create-project works!</p>
+<h1 class="task-create__title">Create New Project</h1>
+<form class="task-create__form" [formGroup]="newProject" (ngSubmit)="createProject()">
+
+  <!-- Task Text Input -->
+  <mat-form-field class="task-create__form-field" appearance="outline">
+    <mat-label>Enter Project</mat-label>
+    <input formControlName="projectText" matInput type="text" placeholder="Enter Project"/>
+  </mat-form-field>
+
+  <div class="task-create__error-text" *ngIf="projectTextErrors.length">
+    {{projectTextErrors.join(', ')}}
+  </div>
+
+  <!-- Task Priority Select -->
+  <mat-form-field class="task-create__form-field" appearance="outline">
+    <mat-label>Select Priority</mat-label>
+    <mat-select formControlName="projectPrio">
+      <mat-option value="Low">Low</mat-option>
+      <mat-option value="Medium">Medium</mat-option>
+      <mat-option value="High">High</mat-option>
+    </mat-select>
+  </mat-form-field>
+
+  <div class="task-create__error-text" *ngIf="newProject.get('projectPrio')?.touched && newProject.get('projectPrio')?.errors?.['required']">
+    <span>This is Required</span>
+  </div>
+
+  <!-- Submit Button -->
+  <div class="task-create__button-container">
+    <app-generic-button 
+      type="submit" 
+      text="Create Project" 
+      [disabled]="!newProject.valid">
+    </app-generic-button>
+  </div>
+</form>
+
