--- a/src/app/pages/home/projects/project-list/project-item/project-item.component.html
+++ b/src/app/pages/home/projects/project-list/project-item/project-item.component.html
@@ -1,6 +1,6 @@
 <li class="task-item">
     <div class="project-item-container">
-      <p class="task-text">{{ project.title}}</p>
+      <p class="task-text" (click)="updateDisplayId(project.id)">{{ project.title}}</p>
       <p>Deadline: {{project.deadline.toISOString().slice(0, 10)}}</p>
     </div>
     <div class="task-actions">
@@ -12,5 +12,8 @@
       <button mat-icon-button (click)="removeTask(project)">
         <mat-icon class="button-icon">close</mat-icon>
       </button>
+    </div>
+    <div class="task-priority">
+      <p>{{ project.priority }}</p>
     </div>
   </li>
