--- a/src/app/pages/home/task-todos/task-list/task-item/task-item.component.scss
+++ b/src/app/pages/home/task-todos/task-list/task-item/task-item.component.scss
@@ -11,15 +11,13 @@
   width: 100%;
   height: 100%; 
   padding: 1rem;
-  box-sizing: border-box;
   border-bottom: 1px solid var(--mat-sys-primary);
 }
 
 
 
 .task-text {
-  margin-right: 1rem;
-  width: 40%;
+  width: 20%;
   font-size: medium;
 }
 
@@ -39,8 +37,7 @@
   width: 60px;
   height: 25px;
   border: 1px solid gray;
-  font-size: x-small;
-  margin-left: 0.25rem;
+  padding: 0.2rem;
 }
 
 .task-priority p {
