--- a/src/app/pages/home/task-todos/task-list/task-list.component.scss
+++ b/src/app/pages/home/task-todos/task-list/task-list.component.scss
@@ -79,6 +79,16 @@ mat-form-field {
   vertical-align: middle;
 }
 
+.task-layout__no-tasks {
+  width: 100%;
+  height: 100%;
+  font-size: large;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
 .offscreen{
   position: absolute;
   left: -10000px;
