--- a/src/app/pages/home/task-todos/task-todos.component.html
+++ b/src/app/pages/home/task-todos/task-todos.component.html
@@ -1,27 +1,32 @@
 <div class="task-layout">
+  <div class="task-top-container">
+    <div (click)="updateDisplayId(null)" title="Back">
+      <mat-icon class="task-back">arrow_back</mat-icon>
+    </div>
     <h1>Tasks</h1>
-  
-    <div class="task-layout__header">
-      <app-task-filter [(filter)]="filter" />
-      <a routerLink="create-task">
-        <app-generic-button text="Add Task" />
-      </a>
-    </div>
-  
-    <div class="task-layout__content">
-      <app-task-list
-        *ngIf="filteredTasks.length > 0; else noTasks"
-        [myTasks]="filteredTasks"
-        [isLoading]="isLoading"
-        (toggled)="onToggleTask($event)"
-      />
-      <ng-template #noTasks>
-        <p class="task-layout__no-tasks" *ngIf="!isLoading">No Todos To Display</p>
-      </ng-template>
-    </div>
-  
-    <div class="task-layout__footer">
-      <app-task-completion [percentCompleted]="percentCompleted" />
-    </div>
+    <div></div>
   </div>
-  
+
+  <div class="task-layout__header">
+    <app-task-filter [(filter)]="filter" />
+    <a routerLink="create-task">
+      <app-generic-button text="Add Task" />
+    </a>
+  </div>
+
+  <div class="task-layout__content">
+    <app-task-list
+      *ngIf="filteredTasks && filteredTasks.length > 0; else noTasks"
+      [myTasks]="filteredTasks"
+      [isLoading]="isLoading"
+      (toggled)="onToggleTask($event)"
+    />
+  </div>
+  <ng-template #noTasks>
+    <p class="task-layout__no-tasks" *ngIf="!isLoading">No Todos To Display</p>
+  </ng-template>
+
+  <div class="task-layout__footer">
+    <app-task-completion [percentCompleted]="percentCompleted" />
+  </div>
+</div>
