--- a/src/app/pages/create-project/create-project.component.scss
+++ b/src/app/pages/create-project/create-project.component.scss
@@ -1,58 +1,57 @@
 :host {
-    height: 100%;
-    width: 100%;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 1rem;
+}
+
+.project-create {
+  &__form {
+    height: auto; /* Anpassas efter innehållet */
+    width: 50%; /* Tar upp 50% av parentens bredd */
+    border: 1px solid gray;
+    border-radius: 10px;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
-    gap: 1rem;
-  }
-  
-  .task-create {
-    &__form {
-     height: auto; /* Anpassas efter innehållet */
-      width: 50%; /* Tar upp all tillgänglig bredd från sin parent */
-      border: 1px solid gray;
-      border-radius: 10px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      padding: 1rem; /* Valfritt: lägger inre marginal */
-      box-sizing: border-box; /* Viktigt så padding inte ökar bredden */
-    }
-  
-    &__title {
-      margin-top: 2rem;
-    }
-  
-    &__form-field {
-      width: 80%;
-    }
-  
-    &__button-container {
-      width: 100%;
-      display: flex;
-      justify-content: flex-end;
-    }
-  
-    &__error-text {
-      margin: 0;
-      padding: 0;
-      font-size: small;
-      color: red;
-      height: auto;
-      margin-bottom: 1rem;
-    }
+    padding: 1rem;
+    box-sizing: border-box;
   }
 
-  @media screen and (max-width: 668px)  {
-    .task-create__error-text{
-      font-size: x-small;
-    }
-
-    .task-create__form{
-      width: 75%;
-    }
+  &__title {
+    margin-top: 2rem;
   }
-  
+
+  &__form-field {
+    width: 80%;
+  }
+
+  &__button-container {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  &__error-text {
+    margin: 0;
+    padding: 0;
+    font-size: small;
+    color: red;
+    height: auto;
+    margin-bottom: 1rem;
+  }
+}
+
+@media screen and (max-width: 668px) {
+  .project-create__error-text {
+    font-size: x-small;
+  }
+
+  .project-create__form {
+    width: 75%;
+  }
+}
