--- a/src/app/pages/create-task/create-task.component.html
+++ b/src/app/pages/create-task/create-task.component.html
@@ -1,20 +1,19 @@
 <h1 class="task-create__title">Create New Task</h1>
 <form class="task-create__form" [formGroup]="newTask" (ngSubmit)="createTask()">
 
-  <!-- Task Text Input -->
   <mat-form-field class="task-create__form-field" appearance="outline">
     <mat-label>Enter Task</mat-label>
-    <input formControlName="taskText" matInput type="text" placeholder="Enter Task"/>
+    <input formControlName="taskText" matInput type="text" placeholder="Enter Task" aria-describedby="taskInputError" aria-required="true"/>
   </mat-form-field>
 
-  <div class="task-create__error-text" *ngIf="taskTextErrors.length">
+  <div id="taskInputError" class="task-create__error-text" *ngIf="taskTextErrors.length">
     {{taskTextErrors.join(', ')}}
   </div>
 
   <mat-form-field class="task-create__form-field" appearance="outline">
     <mat-label>Select Project</mat-label>
-    <mat-select formControlName="taskProject">
-      <mat-option *ngFor="let project of myProjects" [value]="project.id">{{project.title}}</mat-option>
+    <mat-select formControlName="taskProject" aria-describedby="selectErrorProjectTask" aria-required="true">
+      <mat-option id="selectErrorProjectTask" *ngFor="let project of myProjects()" [value]="project.id">{{project.title}}</mat-option>
     </mat-select>
   </mat-form-field>
 
@@ -22,21 +21,20 @@
     <span>This is Required</span>
   </div>
 
-  <!-- Task Priority Select -->
+ 
   <mat-form-field class="task-create__form-field" appearance="outline">
     <mat-label>Select Priority</mat-label>
-    <mat-select formControlName="taskPrio">
+    <mat-select formControlName="taskPrio" aria-describedby="selectErrorPrioTask" aria-required="true">
       <mat-option value="Low">Low</mat-option>
       <mat-option value="Medium">Medium</mat-option>
       <mat-option value="High">High</mat-option>
     </mat-select>
   </mat-form-field>
 
-  <div class="task-create__error-text" *ngIf="newTask.get('taskPrio')?.touched && newTask.get('taskPrio')?.errors?.['required']">
+  <div id="selectErrorPrioTask" class="task-create__error-text" *ngIf="newTask.get('taskPrio')?.touched && newTask.get('taskPrio')?.errors?.['required']">
     <span>This is Required</span>
   </div>
 
-  <!-- Submit Button -->
   <div class="task-create__button-container">
     <app-generic-button 
       type="submit" 
