--- a/src/app/pages/home/projects/project-list/project-item/project-item.component.scss
+++ b/src/app/pages/home/projects/project-list/project-item/project-item.component.scss
@@ -13,7 +13,11 @@
     padding: 1rem;
     border-bottom: 1px solid var(--mat-sys-primary);
   }
-  
+
+  .task-item.isLast {
+    border-bottom: none;
+  }
+
   .project-item-container{
     display:flex;
     flex-direction: column;
@@ -45,6 +49,11 @@
   
   .task-priority p {
     font-size: small;
+  }
+
+  .expired{
+    color: red;
+    font-style: italic;
   }
   
   .button-icon {
