--- a/src/app/pages/home/task-todos/task-list/task-item/task-item.component.scss
+++ b/src/app/pages/home/task-todos/task-list/task-item/task-item.component.scss
@@ -1,5 +1,5 @@
 :host {
-  height: 100%;        
+  height: 100%;
   width: 100%;
 }
 
@@ -9,91 +9,85 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  height: 100%; 
+  height: 100%;
   padding: 1rem;
   border-bottom: 1px solid var(--mat-sys-primary);
+
+  &--last {
+    border-bottom: none;
+  }
+
+  &__text {
+    width: 20%;
+    font-size: medium;
+  }
+
+  &__actions {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 20%;
+  }
+
+  &__icon {
+    background-color: var(--mat-sys-on-primary);
+    color: var(--mat-sys-primary);
+    vertical-align: middle;
+  }
+
+  &__check {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 20%;
+  }
+
+  &__priority {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 60px;
+    height: 25px;
+    border: 1px solid gray;
+    padding: 0.2rem;
+
+    p {
+      font-size: small;
+    }
+  }
 }
 
-
-
-.task-text {
-  width: 20%;
-  font-size: medium;
-}
-
-.task-actions,
-.task-check,
-.task-priority {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 20%;
-}
-
-.task-priority {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 60px;
-  height: 25px;
-  border: 1px solid gray;
-  padding: 0.2rem;
-}
-
-.task-priority p {
-  font-size: small;
-}
-
-.button-icon {
-  background-color: var(--mat-sys-on-primary);
-  color: var(--mat-sys-primary);
-  vertical-align: middle;
-}
-
-.task-edit-container input {
-  background-color: var(--mat-sys-on-primary);
-}
-
-
-// @media screen and (min-width: 376px) and (max-width: 668px) {
-//   .task-text {
-//     font-size: x-small
-//   }
-
-//  p{
-//   font-size: x-small
-//  }
-// }
-
+// Responsivitet
 @media screen and (max-width: 668px) {
-  .task-text {
-    font-size: x-small
-  }
+  .task-item {
+    &__text {
+      font-size: x-small;
+    }
 
- p{
-  font-size: x-small
- }
+    p {
+      font-size: x-small;
+    }
 
-  mat-icon {
-    font-size: 16px;
-  }
+    mat-icon {
+      font-size: 16px;
+    }
 
-  .button-icon {
-    font-size: 16px;
-    padding: 0.25rem;
-  }
+    &__icon {
+      font-size: 16px;
+      padding: 0.25rem;
+    }
 
-  .task-actions button,
-  .task-check mat-checkbox {
-    transform: scale(0.85);
-  }
+    &__actions button,
+    &__check mat-checkbox {
+      transform: scale(0.85);
+    }
 
-  .task-check mat-checkbox .mat-checkbox-label {
-    font-size: 10px;
-  }
+    &__check mat-checkbox .mat-checkbox-label {
+      font-size: 10px;
+    }
 
-  .task-priority p {
-    font-size: 10px;
+    &__priority p {
+      font-size: 10px;
+    }
   }
 }
-
