--- a/src/app/pages/home/task-todos/task-list/task-list.component.html
+++ b/src/app/pages/home/task-todos/task-list/task-list.component.html
@@ -1,52 +1,49 @@
-<div class="task__ul_outer_container">
-  <ul class="task__ul_container" [ngClass]="{'blur': isBlur}">
-      <div class="task__loading_container" *ngIf="isLoading; else showTasks">
-        <mat-progress-spinner class="task__loading_icon" mode="indeterminate" diameter="50"></mat-progress-spinner>
-      </div>
+<div class="task-layout__list-container">
+  <ul class="task-layout__list" [ngClass]="{'task-layout__list--blur': isBlur}">
+    <div class="task-layout__loading-container" *ngIf="isLoading; else showTasks">
+      <mat-progress-spinner class="task-layout__loading-icon" mode="indeterminate" diameter="50"></mat-progress-spinner>
+    </div>
 
-      <div></div>
-    
-      <ng-template #showTasks>
-        <!-- Använd ng-container för att kombinera *ngIf och *ngFor -->
-        <ng-container *ngIf="filteredTasksById.length > 0 else showNone">
-          <app-task-item 
-            *ngFor="let task of filteredTasksById" 
-            [task]="task"
-            (toggled)="handleToggle($event)"
-            (enableBlur)="handleBlur($event)"
-            (enableEdit)="handleEdit($event[0], $event[1])">
-          </app-task-item>
-        </ng-container>
-      </ng-template>
-  
-      <!-- No tasks available fallback -->
-      <ng-template #showNone>
-        <p class="task-layout__no-tasks">No Tasks To Display</p>
-      </ng-template>
-    
-    </ul>
+    <div></div>
 
-    <form *ngIf="isEdit" [formGroup]="taskEdit" (ngSubmit)="submitEdit()" class="task-edit-container">
-  
-      <div class="task-edit__inputs">
-        <mat-label class="offscreen">Enter Task</mat-label>
-        <mat-form-field appearance="outline">
-          <input formControlName="taskText" matInput type="text" placeholder="Enter Task" />
-        </mat-form-field>
-    
-        <button mat-icon-button type="submit">
-          <mat-icon class="button-icon">check</mat-icon>
-        </button>
+    <ng-template #showTasks>
+      <ng-container *ngIf="filteredTasksById.length > 0 else showNone">
+        <app-task-item 
+          *ngFor="let task of filteredTasksById(); let isLast = last" 
+          [task]="task"
+          (toggled)="handleToggle($event)"
+          (enableBlur)="handleBlur($event)"
+          (enableEdit)="handleEdit($event[0], $event[1])"
+          [isLast]="isLast">
+        </app-task-item>
+      </ng-container>
+    </ng-template>
+
+    <ng-template #showNone>
+      <p class="task-layout__no-tasks-message">No Tasks To Display</p>
+    </ng-template>
+
+  </ul>
+
+  <form *ngIf="isEdit" [formGroup]="taskEdit" (ngSubmit)="submitEdit()" class="task-layout__edit-container">
+
+    <div class="task-layout__edit-inputs">
+      <mat-label class="task-layout__offscreen">Enter Task</mat-label>
+      <mat-form-field appearance="outline">
+        <input aria-describedby="selectTaskUpdate" formControlName="taskText" matInput type="text" placeholder="Enter Task" />
+      </mat-form-field>
+
+      <button mat-icon-button type="submit">
+        <mat-icon aria-label="Update Task Submit" class="task-layout__button-icon">check</mat-icon>
+      </button>
+    </div>
+
+    <div id="selectTaskUpdate" class="task-layout__edit-errors" *ngIf="taskEdit.get('taskText')?.touched && taskTextErrors.length">
+      <div class="task-layout__edit-error-text">
+        {{ taskTextErrors.join(', ')}}
       </div>
-    
-      <div class="task-edit__errors" *ngIf="taskEdit.get('taskText')?.touched && taskTextErrors.length">
-        <div class="task-edit__error-text">
-          {{ taskTextErrors.join(', ')}}
-        </div>
-      </div>
-    
-    </form>
-    
+    </div>
+
+  </form>
+
 </div>
-  
-  
