--- a/src/app/pages/home/task-todos/task-todos.component.scss
+++ b/src/app/pages/home/task-todos/task-todos.component.scss
@@ -1,61 +1,61 @@
 @use '../../../shared/styles/mixins' as *;
+
 :host {
-   @include host-standard
+  @include host-standard;
 }
 
-  .task-layout {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    height: 100%;
-    width: 90%;
-    padding: 1rem;
-}
-
-.task-top-container{
+.task-layout {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
-}
+  height: 100%;
+  width: 90%;
+  padding: 1rem;
 
-.task-back{
-  cursor: pointer;
-}
+  &__top-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+  }
 
-.task-layout__header {
+  &__back-button {
+    cursor: pointer;
+  }
+
+  &__header {
     width: 100%;
     display: flex;
-    justify-content: center;   /* Centrerar horisontellt */
-    align-items: start;       /* Centrerar vertikalt */
-}
+    justify-content: center;
+    align-items: flex-start;
+  }
 
-.task-layout__content {
-    min-height: auto;
+  &__content {
     height: 40vh;
-    overflow-y: auto;          
+    min-height: auto;
+    overflow-y: auto;
     width: 100%;
     border: 1px solid gray;
     border-radius: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
-}
+  }
 
-.task-layout__footer {
+  &__footer {
     width: 100%;
     display: flex;
-    justify-content: space-between;   /* Delar upp utrymmet mellan elementen */
-    align-items: center;       /* Vertikal centrering */
-    padding: 1rem;  /* Lägg till lite inre avstånd så att det inte blir för tätt */
-}
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
+  }
 
-.task-layout__no-tasks {
+  &__no-tasks-message {
     font-size: large;
+  }
 }
-
 
 @media screen and (max-width: 376px) {
   .task-layout__content {
