Fixed more SCSS and added more support for screen readers

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="selectProjectId !== null; else showProjects">
+<div *ngIf="selectProjectId() !== null; else showProjects">
   <app-task-todos [selectProjectId]="selectProjectId()"></app-task-todos>
 </div>
 
