--- a/src/app/pages/home/task-todos/task-list/task-list.component.html
+++ b/src/app/pages/home/task-todos/task-list/task-list.component.html
@@ -7,7 +7,7 @@
     <div></div>
 
     <ng-template #showTasks>
-      <ng-container *ngIf="filteredTasksById.length > 0 else showNone">
+      <ng-container *ngIf="filteredTasksById().length > 0 else showNone">
         <app-task-item 
           *ngFor="let task of filteredTasksById(); let isLast = last" 
           [task]="task"
