--- a/src/app/pages/home/projects/project-list/project-list.component.scss
+++ b/src/app/pages/home/projects/project-list/project-list.component.scss
@@ -1,35 +1,51 @@
-@use '../../../../shared/styles/mixins' as *; 
+@use '../../../../shared/styles/mixins' as *;
 
 :host {
-  @include host-full; 
+  @include host-full;
 }
 
-// Task List Container
-.task__ul_outer_container{
+// Block: task
+.task {
   position: relative;
   width: 100%;
   height: 100%;
+
+  &__list {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    position: relative;
+    transition: filter 0.3s ease-in-out forwards;
+
+    &--blur {
+      filter: blur(10px);
+      pointer-events: none;
+    }
+  }
+
+  &__loading {
+    height: 100%;
+    width: 100%;
+    position: relative;
+
+    &-icon {
+      height: 50px;
+      width: 50px;
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 999;
+    }
+  }
 }
 
-.task__ul_container {
-  display: flex;
-  flex-direction: column;
-  height: 100%; 
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  position: relative;
-  transition: filter 0.3s ease-in-out forwards;
-}
-
-
-.blur{
-  filter: blur(10px);
-  pointer-events: none;
-}
-
-.task-edit-container {
+// Block: task-edit
+.task-edit {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -47,68 +63,49 @@
   border: 1px solid var(--mat-sys-primary);
   border-radius: 10px;
   color: var(--mat-sys-primary);
+
+  &__inputs {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+    gap: 1rem;
+  }
+
+  &__errors {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 0.5rem;
+    width: 100%;
+  }
+
+  &__error-text {
+    font-size: small;
+    color: red;
+  }
+
+  &__submit-icon {
+    background-color: var(--mat-sys-on-primary);
+    color: var(--mat-sys-primary);
+    vertical-align: middle;
+  }
 }
 
-.task-edit__inputs {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  width: 100%;
-  gap: 1rem;
-}
-
+// Mat-form-field styles (inside edit)
 mat-form-field {
   flex-grow: 1;
 }
 
-.task-edit__errors {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  margin-top: 0.5rem;
-  width: 100%;
-}
-
-.task-edit__error-text {
-  font-size: small;
-  color: red;
-}
-
-.button-icon {
-  background-color: var(--mat-sys-on-primary);
-  color: var(--mat-sys-primary);
-  vertical-align: middle;
-}
-
-.offscreen{
+// Accessibility helper
+.offscreen {
   position: absolute;
   left: -10000px;
 }
 
-
-// Loading Spinner Container
-.task__loading_container {
-  height: 100%;
-  width: 100%;
-  position: relative; 
-}
-
-// Loading Spinner Icon
-.task__loading_icon {
-  height: 50px; 
-  width: 50px; 
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%); 
-  z-index: 999; 
-}
-
+// Responsive
 @media screen and (max-width: 668px) {
-  .task-edit-container{
+  .task-edit {
     width: 90%;
   }
 }
-
-  
-  
