--- a/src/app/pages/home/task-todos/task-completion/task-completion.component.html
+++ b/src/app/pages/home/task-todos/task-completion/task-completion.component.html
@@ -1,5 +1,4 @@
 <div class="percentage__container">
     <p>Tasks Completed: {{this.percentCompleted}} %</p>
-    <mat-progress-bar mode="determinate" [value]="percentCompleted" aria-label="Completed Tasks Percentage">
-    </mat-progress-bar>
+    <mat-progress-bar mode="determinate" [value]="percentCompleted" aria-label="Completed Tasks Percentage"></mat-progress-bar>
 </div>
