--- a/src/app/pages/home/task-todos/task-todos.component.html
+++ b/src/app/pages/home/task-todos/task-todos.component.html
@@ -8,7 +8,7 @@
   </div>
 
   <div class="task-layout__header">
-    <app-task-filter [(filter)]="filter" />
+    <app-task-filter [filter]="filter()" (filterChange)="updateFilter($event)" />
     <a routerLink="create-task">
       <app-generic-button aria-label="Add More Tasks" text="Add Task" />
     </a>
